# doco_ugv

install/: local_setup.sh  setup.sh
install/ugv_base_driver/share/ugv_base_driver/: package.bash  package.zsh
install/ugv_description/share/ugv_description/urdf/: ugv.xacro  ugv_shared.xacro  ugv_sim.xacro
install/ugv_safety_watchdog/share/ugv_safety_watchdog/: package.bash  package.zsh
log/: latest_build
src/lslidar_driver/lslidar_driver/launch/: lslidar_launch.py
src/lslidar_driver/lslidar_driver/params/: lsx10.yaml
src/lslidar_driver/lslidar_driver/src/: lslidar_driver.cc
src/ugv_base_driver/: CMakeLists.txt  package.xml
src/ugv_base_driver/include/ugv_base_driver/: protocol.hpp
src/ugv_base_driver/src/: quaternion_solution.cpp  ugv_base_driver.cpp
src/ugv_base_driver/test/: test_protocol.cpp
src/ugv_bringup/: package.xml  setup.cfg  setup.py
src/ugv_bringup/config/: collision_monitor.yaml  ekf.yaml  joy.yaml  joy_teleop_normal.yaml  joy_teleop_slow.yaml  nav2.common.yaml  nav2.hw.overlay.yaml  nav2.sim.overlay.yaml  nav2.yaml  nav2_online_slam.yaml  nav2_online_slam_tuned.yaml  relative_position_fusion_ugv_demo.yaml  ros_gz_bridge.yaml  slam_toolbox.yaml  twist_mux.yaml
src/ugv_bringup/config/foxglove/: map.json
src/ugv_bringup/config/lattice_primitives/: README.md  ugv_omni_2cm_config.json  ugv_omni_2cm_lattice.json  ugv_omni_2cm_rich_lattice.json  ugv_omni_2cm_rich_spec.json  ugv_omni_2cm_spec.json
src/ugv_bringup/config/rviz/: mapping.rviz  navigation.rviz  online_navigation.rviz  sim.rviz
src/ugv_bringup/launch/: base.launch.py  gz_sim.launch.py  joy_teleop.launch.py  keyboard_teleop.launch.py  mapping.launch.py  nav2.launch.py  navigation.launch.py  online_navigation.launch.py  save_map.launch.py  sim.launch.py  sim_mapping.launch.py  sim_navigation.launch.py  slam.launch.py  ugv_demo_online_slam.launch.py
src/ugv_bringup/test/: test_goal_pose_service.py  test_lattice_generator.py  test_launch_helpers.py  test_relative_goal_pose_service.py
src/ugv_bringup/ugv_bringup/: deprecated_launch.py  goal_pose_service.py  initial_pose_publisher.py  lattice_generator.py  launch_helpers.py  map_paths.py  omni_lattice_preset.py  pose_math.py  relative_goal_pose_service.py
src/ugv_bringup_interfaces/: CMakeLists.txt  package.xml
src/ugv_bringup_interfaces/srv/: GoRelativeXY.srv  GoToPose.srv
src/ugv_description/: package.xml  setup.py
src/ugv_description/meshes/: plane.dae  tag16h5_plane.dae  tag36h11_plane.dae
src/ugv_description/urdf/: ugv_shared.xacro
src/ugv_description/urdf/sensors/: lidar.xacro
src/ugv_safety_watchdog/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ugv_safety_watchdog/src/: safety_watchdog_node.cpp
src/ugv_safety_watchdog/ugv_safety_watchdog/: safety_watchdog_node.py
src/ugv_slam_tools/: CMakeLists.txt  package.xml
src/ugv_slam_tools/src/: save_map_client_node.cpp
src/ugv_teleop/: CMakeLists.txt  package.xml  setup.py
src/ugv_teleop/config/: joy_launcher.yaml  keyboard_teleop.yaml
src/ugv_teleop/include/ugv_teleop/: joy_axis_selector_logic.hpp  joy_launcher_logic.hpp  keyboard_teleop_common.hpp  keyboard_teleop_core.hpp
src/ugv_teleop/src/: joy_axis_selector_logic.cpp  joy_axis_selector_node.cpp  joy_launcher_logic.cpp  joy_launcher_node.cpp  keyboard_gui_teleop_node.cpp  keyboard_teleop_common.cpp  keyboard_teleop_core.cpp  keyboard_teleop_node.cpp  keyboard_tty_teleop_node.cpp
src/ugv_teleop/test/: test_joy_axis_selector_logic.cpp  test_joy_launcher_logic.cpp  test_keyboard_teleop_core.cpp
src/ugv_teleop/ugv_teleop/: joy_axis_selector_node.py  joy_launcher_node.py  keyboard_gui_teleop_node.py  keyboard_teleop_common.py  keyboard_teleop_core.py  keyboard_teleop_node.py  keyboard_tty_teleop_node.py
