<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_teleop</name>
  <version>0.0.0</version>
  <description>UGV teleop utilities (joy launcher, axis selector, keyboard teleop).</description>
  <maintainer email="litianshun.cn@gmail.com">litianshun</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>qtbase5-dev</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
